# parallel-distcalc

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yaml
distcalc/: CMakeLists.txt  basics.cpp  basics.h
distcalc/parallel/: CMakeLists.txt  libpar.cpp  libpar.h  main.cpp
distcalc/sequential/: CMakeLists.txt  libseq.cpp  libseq.h
linters/: include_paths  run.sh
tests/: CMakeLists.txt  helper.cpp  helper.h  unittests.cpp
